--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,30 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "ApiLogicServer",
+            "name": "ApiLogicServer - No Security (e.g., for behave tests)",
+            "type": "python",
+            "request": "launch",
+            "program": "api_logic_server_run.py",
+            "redirectOutput": true,
+            "env": {"SECURITY_ENABLED": "False", "PYTHONHASHSEED": "0"},
+            "justMyCode": false,
+            "args": ["--flask_host=localhost", "--port=5656", "--swagger_host=localhost", "--verbose=False"],
+            "console": "internalConsole",
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "name": "Checksum test",
+            "type": "python",
+            "request": "launch",
+            "program": "api/checksum.py",
+            "env": {"PYTHONHASHSEED": "0"},
+            "redirectOutput": true,
+            "justMyCode": false,
+            "console": "internalConsole",
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "name": "ApiLogicServer With Security",
             "type": "python",
             "env": {"APILOGICPROJECT_DEBUG": "False"},
             "request": "launch",
@@ -29,30 +52,6 @@
             "redirectOutput": true,
             "justMyCode": false,
             "args": ["--flask_host=localhost", "--port=5656", "--swagger_host=localhost", "--verbose=False"],
-            "console": "internalConsole",
-            "internalConsoleOptions": "openOnSessionStart",
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": "ApiLogicServer - No Security (e.g., for behave tests)",
-            "type": "python",
-            "request": "launch",
-            "program": "api_logic_server_run.py",
-            "redirectOutput": true,
-            "env": {"SECURITY_ENABLED": "False"},
-            "justMyCode": false,
-            "args": ["--flask_host=localhost", "--port=5656", "--swagger_host=localhost", "--verbose=False"],
-            "console": "internalConsole",
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": "Checksum test",
-            "type": "python",
-            "request": "launch",
-            "program": "checksum.py",
-            "env": {"PYTHONHASHSEED": "0"},
-            "redirectOutput": true,
-            "justMyCode": false,
             "console": "internalConsole",
             "internalConsoleOptions": "openOnSessionStart"
         },
