col alias (Order.ShipZip)

--- a/ui/admin/admin.yaml
+++ b/ui/admin/admin.yaml
@@ -180,25 +180,26 @@ resources:
             <h1>Virtual Relationships</h1>
             Observe that "show" pages have tabs for Manages and Manager.<br>
             These foreign keys are *not* defined in the database, but in <span style="font-family:'Courier New'">database/customize_models.py</span>.<br>
+            <h1>Derived Attributes</h1>
+            <span style="font-family:'Courier New'">ProperSalary</span> is not defined in the database.<br>
+            See <span style="font-family:'Courier New'">database/customize_models.py</span>.<br>
     attributes:
       - label: ' Last Name*'
         name: LastName
         search: true
         sort: true
+      - name: OnLoanDepartmentId
       - name: WorksForDepartmentId
       - name: Salary
         type: DECIMAL
       - name: ProperSalary
         type: DECIMAL
       - name: EmployeeType
-      - name: Id
-      - name: CheckSum
-      - name: ChxSum
       - name: Dues
         type: DECIMAL
         show_when: record["EmployeeType"] == "Hourly"
       - name: FirstName
-      - name: OnLoanDepartmentId
+      - name: Id
       - name: Title
       - name: TitleOfCourtesy
       - name: BirthDate
@@ -389,7 +390,7 @@ resources:
       - name: ShipAddress
       - name: ShipCity
       - name: ShipRegion
-      - name: ShipPostalCode
+      - name: ShipZip
       - name: ShipCountry
     tab_groups:
       - direction: tomany
