--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "name": "Checksum test",
             "type": "python",
             "request": "launch",
-            "program": "api/checksum.py",
+            "program": "api/system/zchecksum.py",
             "env": {"PYTHONHASHSEED": "0"},
             "redirectOutput": true,
             "justMyCode": false,
