--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "api_logic_server_run.py",
             "redirectOutput": true,
-            "env": {"SECURITY_ENABLED": "False", "PYTHONHASHSEED": "0"},
+            "env": {"SECURITY_ENABLED": "False", "PYTHONHASHSEED": "0", "OPT_LOCKING": "ignored"},
             "justMyCode": false,
             "args": ["--flask_host=localhost", "--port=5656", "--swagger_host=localhost", "--verbose=False"],
             "console": "internalConsole",
